[package]
name = "stf"
version = "0.1.0"
edition = "2021"
description = "Shows the contents of a Text File in the terminal"
readme = "README.md"
repository = "https://github.com/Trequa/stf"
license = " GPL-3.0-only"
keywords = ["cli", "show", "display", "file", "util"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
